# BayesianNetwork_Cartpole_with_RL

./: DDQN_CartPole_keras.ipynb  README.md  RNN_2.ipynb  cartpole-ddqn-model3.h5  cartpole-ddqn2.h5  ddqn_Model.ipynb  notear.ipynb  notears_cartpole.ipynb  notears_data.csv  organized_training_memory.pkl  pyproject.toml  requirements.txt  training_memory3.csv  training_memory3.pkl
Model_memory/: Training_memory.ipynb  cartpole-ddqn-agent.h5  cartpole-ddqn-eps90.h5  counterfactual_play_memory_ep100.csv
Model_memory/.ipynb_checkpoints/: Training_memory-checkpoint.ipynb
Model_memory/cartpole_playing_memory/: playing_memory_ep100.csv  playing_memory_ep140.csv  playing_memory_ep180.csv  playing_memory_ep200.csv  playing_memory_ep240.csv  playing_memory_ep280.csv  playing_memory_ep30.csv  playing_memory_ep320.csv  playing_memory_ep360.csv  playing_memory_ep400.csv  playing_memory_ep440.csv  playing_memory_ep480.csv  playing_memory_ep520.csv  playing_memory_ep60.csv
Model_memory/memory_for_model_training/: organized_training_memory_ep110_129.csv  organized_training_memory_ep30_59.csv  organized_training_memory_ep60_89.csv  organized_training_memory_ep90_109.csv  training_memory_eps130.csv  training_memory_eps90.csv
RNN/: actual_lstm.h5  actual_lstm.ipynb
bn/: W_est.csv  bin_data.csv  bn_learn.ipynb  notear.ipynb  sample_data.csv
ddqn/: cartpole-ddqn-model-f.h5  cartpole-ddqn-model-test-avg200.h5  ddqn.ipynb  organized_training_memory4.csv  organized_training_memory4.pkl  organized_training_memory_test_avg200.csv  organized_training_memory_test_avg200.pkl
