[tool.poetry]
name = "bn-dqn"
version = "0.1.0"
description = ""
authors = ["Chen Feng Tsai <rich.tsai1103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "^1.25.2"
scipy = "^1.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
